# safer

./: .codeclimate.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  LICENSE_JPN  README.md  README.txt  appveyor.yml  circle.yml  codecov.yml  method_doxygen.xml  safer.sln
.circleci/: config.yml
Doc/: DB_StaticAnalytics.asta  DB静的解析ツール要件.xmind
Doxygen/: Mantid.doxyfile
ER-StaticAnalysis/: ER-StaticAnalysis.vcxproj  ER-StaticAnalysis.vcxproj.filters  ER.erm  bad-test.a5er  packages.config  test-command.xml  test.a5er
ER-StaticAnalysis/source/: main.cpp  main.h
ER-StaticAnalysis/source/ER/: entity.h  er.cpp  er.h  relation.h  relationship.h
ER-StaticAnalysis/source/analysis_command/: analysisCommand.h  analysisProject.h  analysisProjects.cpp  analysisProjects.h
ER-StaticAnalysis/source/common/: common.h  commonString.h  commonXerces.cpp  commonXerces.h  commonXml.h
ER-StaticAnalysis/source/config/: spellCheckConfigh.h
ER-StaticAnalysis/source/log/: consoleLog.h  logger.h
ER-StaticAnalysis/source/parser/ER/: A5erParser.cpp  A5erParser.h  erParser.h  erParserFactory.h  ermErParser.cpp  ermErParser.h
ER-StaticAnalysis/source/parser/command/: analysisCommandParser.cpp  analysisCommandParser.h  analysisCommandParserFactory.h  analysisCommandPaser.cpp  analysisCommandXmlParser.cpp  analysisCommandXmlParser.h
ER-StaticAnalysis/source/reporter/: analyticsReport.h  analyticsReportXlsx.cpp  analyticsReportXlsx.h  analyticsReportXml.h  analyticsRowData.h  reporter.cpp  reporter.h
ER-StaticAnalysis/source/static_analytics/: columnDataTypeChecker.cpp  columnDataTypeChecker.h  compRegularExpression.cpp  compRegularExpression.h  dBStaticAnalytics.cpp  dBStaticAnalytics.h  indexChecker.cpp  indexChecker.h  relationChecker.cpp  relationChecker.h  relationshipChecker.cpp  relationshipChecker.h  spellChecker.cpp  spellChecker.h  tableChecker.h
ER-StaticAnalysis/test/: CMakeLists.txt  testCompRegularExpression.h  testMain.cpp
ci/appveyor/: ER-StaticAnalysis.vcxproj  XercesLib.vcxproj  appveyor.yml  libhunspell.vcxproj  safer.sln  simplexlsx.sln
ci/circle/: circle.yml  config.yml
ci/codeclimate/: .codeclimate.yml
ci/travis/: .travis.yml
cmake/: boost.cmake  compiler.cmake  define.cmake  hunspell.cmake  include_guard.cmake  xerces-c.cmake
